python3 compat, cleanup, added vhost conf-file

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 # .htaccess file 
 AuthType Basic
 AuthName "Kinski Remote"
-AuthUserFile /var/www/kinski_remote/.htusers 
-require user projektil crocdialer 
+AuthUserFile /var/www/kinski_current/.htusers 
+require user crocdialer 
