fixed bug concerning setting of string arrays, htaccess disabled by default

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 # .htaccess file 
-AuthType Basic
-AuthName "Kinski Remote"
-AuthUserFile /var/www/kinski_current/.htusers 
-require user crocdialer 
+#AuthType Basic
+#AuthName "Kinski Remote"
+#AuthUserFile /var/www/kinski_current/.htusers 
+#require user crocdialer 
+Satisfy Any
+Allow from all
